Hoàn thiện trang web

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                 <div class="col-6"><a href="#"><i class="fa-solid fa-bag-shopping"
                                             style="font-size: 30px; width: 45px; height: 35px; border-radius: 50px;"></i></a>
                                 </div>
-                                <div class="col-6"><a href="#"><i class="fa-solid fa-user"
+                                <div class="col-6"><a href="quan-tri/index (1).html"><i class="fa-solid fa-user"
                                             style="font-size: 30px; width: 45px; height: 35px; border-radius: 50px;"></i></a>
                                 </div>
                             </div>
