Cập nhật lại giá tiền cho từng sản phẩm

--- a/danhSachSanPham.html
+++ b/danhSachSanPham.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="danhSachSanPham.css">
     <script src="https://kit.fontawesome.com/0ff8c738e5.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Danh Mục Sản Phẩm</title>
 </head>
 
 <body>
@@ -131,7 +131,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>  
 
             <div class="row">
                 <div class="col-md-3" style=" background-color: #b6b4b4;">
