--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/0ff8c738e5.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Trang Chủ</title>
 </head>
 
 <body>
@@ -101,7 +101,7 @@
         <!--Dòng chữ chạy-->
         <div class="container-fluid" style="background-color: #333; color: aliceblue;">
             <marquee>
-                Mua càng nhiều - ưu đãi càng lớn. Giảm tới 10% tối đa 100.000 đồng cho lần mua hàng thứ hai.
+                Mua càng nhiều - ưu đãi càng lớn. Giảm tới 10% tối đa 200.000 đồng cho lần mua hàng thứ hai.
             </marquee>
         </div>
     </header>
@@ -134,7 +134,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">489.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -150,7 +150,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">530.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -166,7 +166,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">480.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -182,7 +182,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">380.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -217,7 +217,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">430.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -233,7 +233,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">530.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -249,7 +249,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">490.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -265,7 +265,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">489.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -281,7 +281,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">399.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -297,7 +297,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">450.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -313,7 +313,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">530.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -329,7 +329,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">320.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -364,7 +364,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">489.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -380,7 +380,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">350.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -396,7 +396,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">525.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -412,7 +412,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">399.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -428,7 +428,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">390.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -444,7 +444,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">460.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -460,7 +460,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">380.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -476,7 +476,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">489.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -512,7 +512,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">420.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -528,7 +528,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">40.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -544,7 +544,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">525.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -576,7 +576,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">410.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -592,7 +592,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">135.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -608,7 +608,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">369.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
@@ -624,7 +624,7 @@
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">250.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">219.000 VND</div>
                                         </a>
                                     </div>
                                 </a>
