--- a/quan-tri/index (1).html
+++ b/quan-tri/index (1).html
@@ -62,6 +62,12 @@
 					<span class="text">Đăng Xuất</span>
 				</a>
 			</li>
+			<li>
+				<a href="../index.html" class="logout">
+					<i class='bx bxs-log-out-circle' ></i>
+					<span class="text">Quay Về Trang Chủ</span>
+				</a>
+			</li>
 		</ul>
 	</section>
 	<!-- SIDEBAR -->
