Chỉnh sửa lại phần header

--- a/index.html
+++ b/index.html
@@ -50,49 +50,33 @@
         </div>
 
         <div class="container-fluid main-bar">
-            <div class="row main-bar-container">
-                <div class="col-3">
-                    <a href="index.html"><img src="img/logo.png" alt="logo OOO Clothes" class="logo"></a>
-                </div>
-                <div class="col-5">
-                    <div class="container-fluid">
+            <div class="nav">
+                <div class="row p-2">
+                    <div class="col-md-1 col-sm-2"><img src="img/logo.png" alt="" class="logo"></div>
+                    <div class="col-md-6 col-sm-12">
+                        <ul>
+                            <li><a href="#" style="background-color: red;">SALE</a></li>
+                            <li><a href="#">SẢN PHẨM</a></li>
+                            <li><a href="#">THỂ THAO</a></li>
+                            <li><a href="#">ĐỒ LÓT</a></li>
+                            <li><a href="#">PHỤ KIỆN</a></li>
+                            <li><a href="#">IN LOGO</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3 col-12">
                         <div class="row">
-                            <div class="col-md-2" style="background-color: rgb(255, 38, 0);"><a href="#">SALE</a>
+                            <div class="search-container">
+                                <form action="/action_page.php">
+                                    <input type="text" placeholder="Tìm kiếm sản phẩm..." name="search" class="search-box">
+                                    <button type="submit" class="search-btn"><i class="fa fa-search"></i></button>
+                                </form>
                             </div>
-                            <div class="col-md-2 menu-bar"><a href="danhSachSanPham.html">SẢN PHẨM</a></div>
-                            <div class="col-md-2 menu-bar"><a href="#">THỂ THAO</a></div>
-                            <div class="col-md-2 menu-bar"><a href="#">ĐỒ LÓT</a></div>
-                            <div class="col-md-2 menu-bar"><a href="#">PHỤ KIỆN</a></div>
-                            <div class="col-md-2 menu-bar"><a href="#">IN LOGO</a></div>
                         </div>
                     </div>
-                </div>
-                <div class="col-4">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <div class="row">
-                                <div class="col-md-6 search-bar-container">
-                                    <div class="row">
-                                        <div class="col-sm-6" style="display: flex; text-align: center;">
-                                            <input class="search-box-input" type="text" placeholder="Tìm kiếm"
-                                                name="search">
-                                            <button class="search-box-btn" type="submit">
-                                                <i class="fa fa-search"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="row">
-                                <div class="col-6"><a href="#"><i class="fa-solid fa-bag-shopping"
-                                            style="font-size: 30px; width: 45px; height: 35px; border-radius: 50px;"></i></a>
-                                </div>
-                                <div class="col-6"><a href="quan-tri/index (1).html"><i class="fa-solid fa-user"
-                                            style="font-size: 30px; width: 45px; height: 35px; border-radius: 50px;"></i></a>
-                                </div>
-                            </div>
+                    <div class="col-md-2 col-12">
+                        <div class="row right-menu">
+                            <a href="#">GIỎ HÀNG</a>
+                            <a href="#">ĐĂNG NHẬP</a>
                         </div>
                     </div>
                 </div>
